discrim-codegen/tests/ui/empty_enum.stderr
error: proc-macro derive panicked
 --> $DIR/empty_enum.rs:3:10
  |
3 | #[derive(FromDiscriminant)]
  |          ^^^^^^^^^^^^^^^^
  |
  = help: message: enum must have at least one variant
