discrim-codegen/tests/ui/empty_enum.rs
use discrim::FromDiscriminant;

#[derive(FromDiscriminant)]
enum Empty { }

fn main() {
    println!("empty");
}
